--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'German fiction'
 - !lcc 'PT'
+- GITenberg
 title: 'Engelhart Ratgeber: Roman'
 url: http://www.gutenberg.org/ebooks/26402
